--- a/css/forecast-style.css
+++ b/css/forecast-style.css
@@ -194,3 +194,8 @@ tr:nth-child(7) > th:nth-child(5) > span:nth-child(2),
 tr:nth-child(8) > th:nth-child(4) > span:nth-child(2) {
   background-color: #f26322;
 }
+
+
+@media screen and (max-width: 1024px){
+
+}
